name:                nano-hmac
version:             0.2.1
description:         Bindings to OpenSSL HMAC.
synopsis:            Bindings to OpenSSL HMAC.
license:             BSD3
license-file:        LICENSE
homepage:            http://www.jasani.org/search/label/nano-hmac
author:              Hitesh Jasani
category:            Codec
maintainer:          <hitesh.jasani@gmail.com>
Cabal-Version:       >= 1.6
Build-Type:          Simple
Tested-With:         GHC == 6.8.2
extra-source-files:  README test/Makefile test/hmac_hu.hs

library
  build-depends:     base       == 4.2.*,
                     bytestring == 0.9.1.*
  exposed-modules:   Data.Digest.OpenSSL.HMAC
  ghc-options:       -Wall -O2 -fvia-C
  extensions:        ForeignFunctionInterface, BangPatterns, CPP
  includes:          openssl/hmac.h
  extra-libraries:   crypto ssl

